[package]
name = "prestige"
version = "0.1.0"
authors = ["dineshadepu <adepu.dinesh.a@gmail.com>"]
edition = "2018"


[dependencies]
rayon = "1.0.3"
indicatif = "0.10.1"
vtkio = "0.1.6"
rand = "0.6"
assert_approx_eq = "*"
cgmath = "*"
itertools-num = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_llnnps"
harness = false
