[package]
name = "simple_particles"
version = "0.1.0"
edition = "2024"

[dependencies]
cudarc = {path = "../cudarc/",  features=["cuda-13010"]}
indicatif = "0.17"
rand = "0.9.2"


[[example]]
name = "two_balls"
path = "examples/two_balls.rs"

[[example]]
name = "bouncing_ball"
path = "examples/bouncing_ball.rs"

[[example]]
name = "bouncing_ball_brute"
path = "examples/bouncing_ball_brute.rs"

[[example]]
name = "rain_in_tank"
path = "examples/rain_in_tank.rs"
